# ok_lets_go_gpt_assistant

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  Taskfile.yaml  pyproject.toml
ok_lets_go_gpt_assistant/: __init__.py  __main__.py  _app.py  _cli.py  _settings.py
